--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,6 @@
   "name": "Rolling Zoo",
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#BFBAFF",
   "background_color": "#ffffff"
 }
