--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "name": "Rolling Vet",
   "start_url": "index.html",
   "display": "standalone",
-  "theme_color": "#6780FD",
-  "background_color": "#ffffff",
+  "theme_color": "#fff",
+  "background_color": "#fff",
   "icons": [
     {
       "src": "img/favicon.png",
