--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
   "short_name": "Rolling Vet",
+  "proxy": "http://localhost:5000/",
   "name": "Rolling Vet",
   "start_url": "/",
   "display": "standalone",
