--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "rollingvet",
-    "version": "0.1.0",
-    "proxy":"http://localhost:5000/",
+    "version": "1.0.0",
+    "proxy":"http://rollingvet.herokuapp.com",
     "private": true,
     "dependencies": {
         "@emailjs/browser": "^3.4.0",
