--- a/server/package.json
+++ b/server/package.json
@@ -8,17 +8,23 @@
     "dev": "nodemon server.js",
     "start": "node server.js"
   },
-  "keywords": ["veterinaria","obra social de mascotas","tucuman"],
+  "keywords": [
+    "veterinaria",
+    "obra social de mascotas",
+    "tucuman"
+  ],
   "author": "Ezequiel Amin",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.1.8",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
