--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
     "name": "rollingvet",
     "version": "1.0.0",
+    "proxy": "http://localhost:5000/",
     "private": true,
     "dependencies": {
         "@emailjs/browser": "^3.4.0",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
-        "@mui/material": "^5.3.1",
+        "@mui/material": "^5.4.0",
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.1.3",
-        "http-proxy-middleware": "^2.0.2",
         "react": "^17.0.2",
         "react-bootstrap": "^2.1.0",
         "react-dom": "^17.0.2",
         "react-router": "^6.2.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
-        "sweetalert2": "^11.3.3",
+        "sweetalert2": "^11.3.10",
         "web-vitals": "^2.1.2"
     },
     "scripts": {
