--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "rollingvet",
     "version": "1.0.3",
+    "proxy": "http://localhost:5000/",
     "private": true,
     "dependencies": {
         "@emailjs/browser": "^3.4.0",
