--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-MONGODB_URI=mongodb+srv://admin:admin@clustereze1.ceu7g.mongodb.net/RollingVet?retryWrites=true&w=majority
-SECRET_KEY=rolling2022
+SERVER_URL=http://localhost:5000
