--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,6 +2,7 @@
   "short_name": "Rolling Vet",
   "proxy": "https://rollingvet.herokuapp.com",
   "name": "Rolling Vet",
+  "description":"Tu veterinaria de confianza",
   "start_url": "/",
   "display": "standalone",
   "theme_color": "#fff",
