--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-REACT_APP_SERVER_URL=http://localhost:5000
-
+REACT_APP_SERVER_URL=https://rollingvet.herokuapp.com
 #http://localhost:5000
 #https://rollingvet.herokuapp.com
