--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-REACT_APP_SERVER_URL=https://rollingvet.herokuapp.com
+REACT_APP_SERVER_URL=http://localhost:5000
+
 #http://localhost:5000
 #https://rollingvet.herokuapp.com
